CSS change with z-index: 1; within .fixedheader
survey_results.php page

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ header {
 	margin-bottom: 50px;
 	width: 100%;
 	top: 0;
+	z-index: 1;
 }
 
 .header-title {
